@@ -14,7 +14,9 @@
 	color: #7F8083;
 }
 .editorWrap {
- 	margin:0;padding:0;
+ 	margin: 0;
+ 	margin-top: 2px;
+ 	padding: 0;
 }
 .editorWrap textarea {
 	border: 1px solid #A2AAB8;
@@ -131,8 +133,10 @@
 }
 .htmlarea .toolbar .separator {
 	border:1px solid #999;
-	width:7px;height:23px;
-	float:left;
+	width: 7px;
+	height: 23px;
+	margin-bottom: 1px;
+	float: left;
 }
 .htmlarea .toolbar .space {
 	height:22px;
@@ -141,11 +145,15 @@
 	float:left;
 }
 .htmlarea .toolbar .select {
-	font:10px Tahoma,Verdana,sans-serif;
-	height:18px;
-	border:1px solid #A2AAB8;
+	color: WindowText;
+	height: 18px;
 	margin: 0 0 4px 0;
-	padding: 1px;
+}
+.htmlarea .toolbar .x-form-item label.x-form-item-label{
+	padding-right: 0;
+}
+.htmlarea .toolbar .x-form-field-wrap .x-form-trigger {
+	right: 0;
 }
 .htmlarea .toolbar .select, .htmlarea .toolbar .select:hover, .htmlarea .toolbar .select:active {
 	background-color:#fff;color:ButtonText;
